--- a/days1/style.css
+++ b/days1/style.css
@@ -6,19 +6,23 @@
 
 body{
   font-family: "Space Grotesk", sans-serif;
+  background-color: rgb(91, 85, 85);
 }
 
 
 .container{
-  max-width: 12in;
-  height: 16in;
-  margin: 20px auto 20px;
+  background-color: rgb(235, 223, 223);
+  max-width: 14in;
+  height: 15in;
+  margin: 50px auto 50px;
+  border-radius: 12px;
   box-shadow: 0 1ch 1ch 0;
   justify-content: center;
 }
 
 .profile{
-  padding: 150px;
+  padding: 350px;
+  padding-top: 100px;
   text-align: justify;
 }
 
@@ -36,12 +40,12 @@ body{
   margin: 65px auto 17px;
   color: white;
   background-color: rgb(24, 23, 45);
-  font-size: 2em;
+  font-size: 1.8em;
   font-family: unset;
-  width: 180px;
-  height: 60px;
+  width: 170px;
+  height: 55px;
   line-height: 5px;
-  border-radius: 5%;
+  border-radius: 50px;
   border: 1px solid black;
   cursor: pointer;
 }
@@ -54,9 +58,10 @@ body{
 .links a{
   text-decoration: none;
   display: inline-block;
+  font-family: cursive;
   margin-top: 10px;
-  margin-left: 1px;
-  font-size: 1.8em;
+  margin-left: 2px;
+  font-size: 1.5em;
   color: rgb(28, 16, 42);
 }
 
@@ -70,16 +75,17 @@ body{
 
 .socials i{
   margin-top: 120px;
-  margin-right: 10px;
-  width: 80px;
-  height: 80px;
-  line-height: 80px;
-  font-size: 2.7em;
+  margin-right: 20px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 2em;
   display: inline-block;
-  border-radius: 25%;
+  border-radius: 50px;
   border: 1px solid black;
   color: white;
   background-color: black;
+  cursor: pointer;
 }
 
 .socials i:hover{
@@ -88,28 +94,31 @@ body{
 }
 
 .card{
-  max-width: 430px;
-  height: 580px;
-  box-shadow: 0 0 1ch 0;
-  border-radius: 5%;
-  margin: 0px auto 100px;
-  text-align: center;
+  background: #ffffff;
+  display: inline-block;
+  width: 430px;
+  height: 600px;
+  box-shadow: 0 12px 25px rgba(3, 3, 3, 0.1);
+  border-radius: 12px;
+  margin-bottom: 10px;
+  margin-top: -290px;
+  margin-left: 450px;
 }
 
 .profile-img{
-  border-radius: 5%;
+  border-radius: 12px 12px 0 0;
   width: 429px;
   height: 511px;
-  object-fit: initial;
+  object-fit: cover
 }
 
-.name{
-  margin: auto ;
-  font-size: 2em;
+.profile-info h2{
+  font-size: 33px;
   font-weight: bold;
+  text-align: center;
 }
 
-.card p{
+.profile-info p{
   font-size: 1.1em;
-  font-weight: bold;
+  text-align: center;
 }
